@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-10T00:34:48Z",
+  "timestamp" : "2022-11-11T00:37:51Z",
   "count_outdated" : 658,
   "uniques_outdated" : 141,
-  "count" : 696,
-  "uniques" : 150,
+  "count" : 697,
+  "uniques" : 151,
   "views" : [
     {
       "timestamp": "2022-10-28T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-11-09T00:00:00Z",
       "count": 11,
       "count_minmax": [ 11, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
