@@ -1,6 +1,6 @@
 {
-  "count": 38,
-  "uniques": 9,
+  "count": 39,
+  "uniques": 10,
   "views": [
     {
       "timestamp": "2022-10-28T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-11-09T00:00:00Z",
       "count": 11,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-10T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
